src/assets/css/index.css
@font-face {
  font-family: ubuntu;
  src: url(../fonts/Ubuntu-Regular.ttf);
}

body {
  position: absolute;
  font-family: ubuntu;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin-bottom: 200px;
  overflow: visible;
}

* {    
  margin: 0;
}

